# mcp-hello-py

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: server.py
